Thu Jul 29 13:28:32 2004  Jonathan Blandford  <jrb@gnome.org>

	* freedesktop.org.xml.in: add application/x-wordperfect and
	application/wordperfect as aliases to application/vnd.wordperfect,
	#914

2004-07-25  Christian Neumair  <chris@gnome-de.org>

	* freedesktop.xml.in: Add "*.exe" glob pattern to
	application/x-ms-dos-executable, raise magic priority over
	application/x-executable.

Fri Jul  9 12:24:04 2004  Thomas Leonard  <tal00r@ecs.soton.ac.uk>

	* freedesktop.org.xml.in: Merged the two msword types by making them
	aliases. Same thing for the two msexcel types and the two realaudio
	types (part of patch from David Faure, in #619).

Fri Apr 23 11:44:23 2004  Jonathan Blandford  <jrb@gnome.org>

	* freedesktop.org.xml.in: Added text/x-xmi, #543

2004-04-11  Christian Neumair  <chris@gnome-de.org>

	* freedesktop.xml.in: Added *.abw.CRASHED glob pattern to
	application/x-abiword, added text/x-gettext-translation-template,
	added match tag to application/vnd.ms-powerpoint.

2004-04-06  Christian Neumair  <chris@gnome-de.org>

	* configure.in (ALL_LINGUAS): Added German (de).

Tue Mar 23 14:35:47 2004  Thomas Leonard  <tal00r@ecs.soton.ac.uk>

	* freedesktop.org.xml.in: Added application/x-javascript type.

Tue Mar 23 02:09:23 2004  Jonathan Blandford  <jrb@gnome.org>

	* configure.in (GETTEXT_PACKAGE): add cs.po
	* po/cs.po: New po file.

Sun Mar 21 23:07:24 2004  Jonathan Blandford  <jrb@gnome.org>

	* NEWS: darnit.  I didn't save the NEWS file before
	tagging/releasing.  Updated for CVS.

Sun Mar 21 22:39:58 2004  Jonathan Blandford  <jrb@gnome.org>

	* configure.in: version 0.14

	* freedesktop.org.xml.in: upped the mozilla/netscape bookmarks
	priority.

	* freedesktop.org.xml.in: change xbell to x-xbel, #195

	* freedesktop.org.xml.in: Add matroska video mime type.  Patch
	from Johan Fischer <linux@fischaz.com>, #301

Sun Mar 21 17:50:21 2004  Jonathan Blandford  <jrb@gnome.org>

	* configure.in (GETTEXT_PACKAGE): add az.po
	* po/az.po: New po file.
