@@ -119,6 +119,7 @@ command to generate the output files.
     <glob pattern="*.ps"/>
   </mime-type>
   <mime-type type="application/rtf">
+    <sub-class-of type="text/plain"/>
     <_comment>Rich Text Format</_comment>
     <magic priority="50">
       <match type="string" value="{\\rtf" offset="0"/>
@@ -126,6 +127,7 @@ command to generate the output files.
     <glob pattern="*.rtf"/>
   </mime-type>
   <mime-type type="application/smil">
+    <sub-class-of type="text/plain"/>
     <_comment>Synchronized Multimedia Integration Language</_comment>
     <glob pattern="*.smil"/>
     <glob pattern="*.smi"/>
@@ -284,6 +286,7 @@ command to generate the output files.
     <glob pattern="*.wpd"/>
   </mime-type>
   <mime-type type="application/x-xbel">
+    <sub-class-of type="text/plain"/>
     <_comment>XBEL bookmarks</_comment>
     <magic priority="50">
       <match type="string" value="&lt;!DOCTYPE\ xbel" offset="0:64"/>
@@ -350,10 +353,12 @@ command to generate the output files.
     <glob pattern="*.arj"/>
   </mime-type>
   <mime-type type="application/x-asp">
+    <sub-class-of type="text/plain"/>
     <_comment>active server page</_comment>
     <glob pattern="*.asp"/>
   </mime-type>
   <mime-type type="application/x-awk">
+    <sub-class-of type="text/plain"/>
     <_comment>AWK script</_comment>
     <magic priority="50">
       <match type="string" value="#!/bin/gawk" offset="0"/>
@@ -406,6 +411,7 @@ command to generate the output files.
     <glob pattern="*.iso"/>
   </mime-type>
   <mime-type type="application/x-cgi">
+    <sub-class-of type="text/plain"/>
     <_comment>CGI script</_comment>
     <glob pattern="*.cgi"/>
   </mime-type>
@@ -462,6 +468,7 @@ command to generate the output files.
     <glob pattern="*.cpio.gz"/>
   </mime-type>
   <mime-type type="application/x-csh">
+    <sub-class-of type="text/plain"/>
     <_comment>C shell script</_comment>
   </mime-type>
   <mime-type type="application/x-dbase">
@@ -491,6 +498,7 @@ command to generate the output files.
     <glob pattern="*.ui"/>
   </mime-type>
   <mime-type type="application/x-desktop">
+    <sub-class-of type="text/plain"/>
     <_comment>desktop configuration file</_comment>
     <magic priority="50">
       <match type="string" value="[Desktop Entry]" offset="0:32"/>
@@ -685,6 +693,7 @@ command to generate the output files.
     <glob pattern="*.gmo"/>
   </mime-type>
   <mime-type type="application/x-glade">
+    <sub-class-of type="text/plain"/>
     <_comment>Glade project</_comment>
     <glob pattern="*.glade"/>
   </mime-type>
@@ -756,6 +765,7 @@ command to generate the output files.
     <glob pattern="*.class"/>
   </mime-type>
   <mime-type type="application/x-javascript">
+    <sub-class-of type="text/plain"/>
     <_comment>Javascript program</_comment>
     <glob pattern="*.js"/>
   </mime-type>
@@ -985,6 +995,7 @@ command to generate the output files.
     <glob pattern="*.lzo"/>
   </mime-type>
   <mime-type type="application/x-magicpoint">
+    <sub-class-of type="text/plain"/>
     <_comment>MagicPoint presentation</_comment>
     <glob pattern="*.mgp"/>
   </mime-type>
@@ -1036,6 +1047,7 @@ command to generate the output files.
     <glob pattern="*.n64"/>
   </mime-type>
   <mime-type type="application/x-nautilus-link">
+    <sub-class-of type="text/plain"/>
     <_comment>Nautilus link</_comment>
     <magic priority="50">
       <match type="string" value="&lt;nautilus_object nautilus_link" offset="0:32"/>
@@ -1051,6 +1063,7 @@ command to generate the output files.
     <glob pattern="*.nc"/>
   </mime-type>
   <mime-type type="application/x-netscape-bookmarks">
+    <sub-class-of type="text/plain"/>
     <_comment>Netscape bookmarks</_comment>
     <magic priority="80">
       <match type="string" value="&lt;!DOCTYPE NETSCAPE-Bookmark-file-1&gt;" offset="0:64"/>
@@ -1104,6 +1117,7 @@ command to generate the output files.
     </magic>
   </mime-type>
   <mime-type type="application/x-perl">
+    <sub-class-of type="text/plain"/>
     <_comment>Perl script</_comment>
     <magic priority="50">
       <match type="string" value='eval \"exec /usr/local/bin/perl' offset="0"/>
@@ -1116,6 +1130,7 @@ command to generate the output files.
     <glob pattern="*.perl"/>
   </mime-type>
   <mime-type type="application/x-php">
+    <sub-class-of type="text/plain"/>
     <_comment>PHP script</_comment>
     <magic priority="80">
       <match type="string" value="&lt;?php" offset="0:64"/>
@@ -1130,6 +1145,7 @@ command to generate the output files.
     <glob pattern="*.pfx"/>
   </mime-type>
   <mime-type type="application/x-profile">
+    <sub-class-of type="text/plain"/>
     <_comment>profiler results</_comment>
     <glob pattern="gmon.out"/>
   </mime-type>
@@ -1138,6 +1154,7 @@ command to generate the output files.
     <glob pattern="*.pw"/>
   </mime-type>
   <mime-type type="application/x-python">
+    <sub-class-of type="text/plain"/>
     <_comment>Python script</_comment>
     <magic priority="50">
       <match type="string" value="#!/bin/python" offset="0"/>
@@ -1179,6 +1196,7 @@ command to generate the output files.
     <glob pattern="*.rar"/>
   </mime-type>
   <mime-type type="application/x-reject">
+    <sub-class-of type="text/plain"/>
     <_comment>rejected patch</_comment>
     <glob pattern="*.rej"/>
   </mime-type>
@@ -1190,6 +1208,7 @@ command to generate the output files.
     <glob pattern="*.rpm"/>
   </mime-type>
   <mime-type type="application/x-ruby">
+    <sub-class-of type="text/plain"/>
     <_comment>Ruby script</_comment>
     <magic>
       <match type="string" value="/bin/env ruby" offset="1:16"/>
@@ -1201,6 +1220,7 @@ command to generate the output files.
     </magic>
   </mime-type>
   <mime-type type="application/x-shar">
+    <sub-class-of type="text/plain"/>
     <_comment>shell archive</_comment>
     <glob pattern="*.shar"/>
   </mime-type>
@@ -1229,6 +1249,7 @@ command to generate the output files.
     <glob pattern="*.so"/>
   </mime-type>
   <mime-type type="application/x-shellscript">
+    <sub-class-of type="text/plain"/>
     <_comment>shell script</_comment>
     <magic priority="50">
       <match type="string" value="#!/bin/ksh" offset="0"/>
@@ -1313,6 +1334,7 @@ command to generate the output files.
     <glob pattern="*.obj"/>
   </mime-type>
   <mime-type type="application/x-theme">
+    <sub-class-of type="text/plain"/>
     <_comment>theme</_comment>
     <glob pattern="*.theme"/>
   </mime-type>
@@ -1328,6 +1350,7 @@ command to generate the output files.
     <glob pattern="*.sik"/>
   </mime-type>
   <mime-type type="application/x-troff">
+    <sub-class-of type="text/plain"/>
     <_comment>Troff document</_comment>
     <magic priority="50">
       <match type="string" value='.\\\"' offset="0"/>
@@ -1340,6 +1363,7 @@ command to generate the output files.
     <glob pattern="*.t"/>
   </mime-type>
   <mime-type type="application/x-troff-man">
+    <sub-class-of type="text/plain"/>
     <_comment>Troff document (with manpage macros)</_comment>
     <glob pattern="*.man"/>
   </mime-type>
@@ -1382,6 +1406,7 @@ command to generate the output files.
     <glob pattern="*.zoo"/>
   </mime-type>
   <mime-type type="application/xhtml+xml">
+    <sub-class-of type="text/plain"/>
     <_comment>XHTML page</_comment>
     <glob pattern="*.xhtml"/>
     <root-XML namespaceURI='http://www.w3.org/1999/xhtml' localName='html'/>
@@ -1895,6 +1920,7 @@ command to generate the output files.
     <_comment>symbolic link</_comment>
   </mime-type>
   <mime-type type="message/delivery-status">
+    <sub-class-of type="text/plain"/>
     <_comment>mail delivery report</_comment>
   </mime-type>
   <mime-type type="message/disposition-notification">
@@ -1904,6 +1930,7 @@ command to generate the output files.
     <_comment>reference to remote file</_comment>
   </mime-type>
   <mime-type type="message/news">
+    <sub-class-of type="text/plain"/>
     <_comment>Usenet news message</_comment>
     <magic priority="50">
       <match type="string" value="Article" offset="0"/>
@@ -1912,9 +1939,11 @@ command to generate the output files.
     </magic>
   </mime-type>
   <mime-type type="message/partial">
+    <sub-class-of type="text/plain"/>
     <_comment>partial email message</_comment>
   </mime-type>
   <mime-type type="message/rfc822">
+    <sub-class-of type="text/plain"/>
     <_comment>email message</_comment>
     <magic priority="50">
       <match type="string" value="#! rnews" offset="0"/>
