@@ -1,3 +1,8 @@
+2004-08-12  Alexander Larsson  <alexl@redhat.com>
+
+	* freedesktop.org.xml.in:
+	Inherit text file types from text/plain
+
 Thu Jul 29 13:28:32 2004  Jonathan Blandford  <jrb@gnome.org>
 
 	* freedesktop.org.xml.in: add application/x-wordperfect and
